--- a/style.css
+++ b/style.css
@@ -1,4 +1,31 @@
+html {
+  font-size: 62%;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
+  line-height: 16px;
+  letter-spacing: 2px;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+  font-size: 22px;
+  font-weight: inherit;
+  background-color: #194c61;
+  height: 100vh;
+  width: 100vw;
+}
+
 h1 {
   text-align: center;
   font-size: 36px;
+}
+
+.countdown-timer-box {
+  width: 800px;
+  border: 4px solid #333;
+  border-radius: 6px;
+	background-color: #f2f2f2;
 }
