--- a/style.css
+++ b/style.css
@@ -29,3 +29,25 @@ h1 {
   border-radius: 6px;
 	background-color: #f2f2f2;
 }
+
+.container {
+  justify-content: center;
+	align-items: center;
+	position: relative;
+	display: flex;
+	flex-direction: row;
+  width: 900px;
+	height: 300px;
+	background-color: transparent;
+	border-radius: 4px;
+	box-shadow: none;
+}
+
+.clock-label {
+	padding-top: 10px;
+	text-transform: uppercase;
+	color: #131313;
+	font-size: 14px;
+	text-align: center;
+	border-top: 1px solid #a6a6a6;
+}
