--- a/style.css
+++ b/style.css
@@ -43,6 +43,30 @@ h1 {
 	box-shadow: none;
 }
 
+.clock-column {
+	text-align: center;
+	position: relative;
+  margin-right: 100px;
+
+	&::after {
+		content: ':';
+		display: block;
+		width: 4px;
+    height: 4px;
+		font-size: 36px;
+		font-weight: 200;
+		color: #131313;
+		position: absolute;
+		top: 60px;
+		right: -40px;
+	}
+	&:last-child {
+		&::after {
+			display: none;
+		}
+	}
+}
+
 .clock-label {
 	padding-top: 10px;
 	text-transform: uppercase;
@@ -50,4 +74,29 @@ h1 {
 	font-size: 14px;
 	text-align: center;
 	border-top: 1px solid #a6a6a6;
+}
+
+.clock-timer {
+	color: #131313;
+	font-size: 36px;
+	line-height: 1;
+}
+
+.clock-input {
+	clear: both;
+	text-align: center;
+	max-width: 500px;
+	width: 100%;
+  margin-top: 30px;
+}
+
+input#time-to {
+	padding: 5px;
+	border: 1px solid #333;
+	border-radius: 4px;
+	font-size: 24px;
+	font-family: monospace;
+	text-align: center;
+	color: #141414;
+	background-color: #d1e0e3;
 }
